removed temp distro files. Add fix for naming processes.

--- a/transforms/images/image-assembler-plugin/Dockerfile
+++ b/transforms/images/image-assembler-plugin/Dockerfile
@@ -19,6 +19,8 @@ COPY VERSION ${EXEC_DIR}
 COPY README.md ${EXEC_DIR}
 COPY CHANGELOG.md ${EXEC_DIR}
 COPY src ${EXEC_DIR}/src
+
+# TODO temp modification for testing. Should be removed.
 COPY preadator_package /usr/local/lib/python3.9/dist-packages/
 
 RUN pip3 install ${EXEC_DIR} --no-cache-dir
