doc: change todo to note build: filepattern version updated

--- a/transforms/images/image-assembler-plugin/pyproject.toml
+++ b/transforms/images/image-assembler-plugin/pyproject.toml
@@ -9,8 +9,8 @@ packages = [{include = "polus", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9.15"
 bfio = {version = "2.1.9", extras = ["all"]}
-#filepattern = "^2.0.1" # on linux and windows through package manager
-filepattern = ">=0, <1" #for osx dev
+filepattern = "^2.0.1" # on linux and windows through package manager
+# filepattern = ">=0, <1" #for osx dev
 pydantic = "<2" # this is dependency of filepattern not declared in it
 preadator = "0.4.0.dev1"
 typer = "^0.7.0"
