fix: rt-cetsa-intensity-extraction-tool dependencies

--- a/features/rt-cetsa-intensity-extraction-tool/pyproject.toml
+++ b/features/rt-cetsa-intensity-extraction-tool/pyproject.toml
@@ -22,7 +22,7 @@ imagecodecs = "^2024.1.1"
 # polus-images-segmentation-rt-cetsa-plate-extraction = {git = "https://github.com/agerardin/image-tools.git", branch = "feat/rt_cetsa_new_data", subdirectory = "segmentation/rt-cetsa-plate-extraction-tool"}
 # polus-images-segmentation-rt-cetsa-plate-extraction = {git = "https://github.com/agerardin/image-tools.git", branch = "feat/rt_cetsa_new_data", subdirectory = "segmentation/rt-cetsa-plate-extraction-tool"}
 # polus-images-segmentation-rt-cetsa-plate-extraction = {path = "/Users/antoinegerardin/Documents/projects/polus-plugins/segmentation/rt-cetsa-plate-extraction-tool", develop=true}
-polus-images-segmentation-rt-cetsa-plate-extraction = {path = "rt-cetsa-plate-extraction-tool", develop=true}
+polus-images-segmentation-rt-cetsa-plate-extraction = {path = "./rt-cetsa-plate-extraction-tool", develop=true}
 
 
 [tool.poetry.group.dev.dependencies]
